<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_register"
        tools:context=".Register.MainActivity">

    <TextView
            android:text="@string/email"
            android:layout_width="134dp"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:id="@+id/email_register"
            android:textSize="18sp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/last_name"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/email_register_value"/>
    <EditText
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/last_name_register_value" android:layout_marginTop="77dp"
            app:layout_constraintTop_toBottomOf="@+id/id_number_register_value" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/name_register"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.562"/>
    <TextView
            android:text="@string/last_name"
            android:layout_width="134dp"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:id="@+id/last_name"
            android:textSize="18sp"
            android:layout_marginTop="77dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/name_register_value"
            app:layout_constraintHorizontal_bias="0.446"/>
    <TextView
            android:text="@string/id_number"
            android:layout_width="134dp"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:id="@+id/textView3"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/id_type_register"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/id_number_register_value"/>
    <TextView
            android:text="@string/name"
            android:layout_width="134dp"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:id="@+id/name_register"
            android:textSize="18sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/name_register_value"/>
    <TextView
            android:text="@string/info"
            android:layout_width="266dp"
            android:layout_height="64dp"
            android:id="@+id/textView6" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="176dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="177dp" android:textAlignment="center" android:textSize="@dimen/fab_margin"/>

    <TextView
            android:text="@string/id_type"
            android:layout_width="134dp"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:id="@+id/id_type_register"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/id_type_register_value"/>
    <TextView
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/id_type_register_value" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/id_type_register"
            android:layout_marginStart="8dp" android:textSize="18sp" />
    <TextView
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/id_number_register_value"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/id_type_register_value"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginStart="8dp"
            />
    <EditText
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_register_value" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/id_number_register_value" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/name_register"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_register_value" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/last_name_register_value" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/email_register"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>